Changed all files from Maaz to Drake. Rough drafted the paragraphs.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maaz Amjad - Academic Profile</title>
+    <title>Drake Wyatt - Academic Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         * {
@@ -218,17 +218,17 @@
 <body>
     <div class="container">
         <nav>
-            <a href="index.html" class="name-title">Maaz Amjad</a>
+            <a href="index.html" class="name-title">Drake Wyatt</a>
             <div class="nav-links">
                 <a href="projects.html">Projects</a>
-                <a href="files/Maaz_cv.pdf" target="_blank">CV</a>
+                <a href="files/Drake_cv.pdf" target="_blank">CV</a>
             </div>
         </nav>
 
         <div class="profile-section">
             <div class="profile-sidebar">
-                <img src="images/profile.jpg" alt="Profile Picture" class="profile-image">
-                <h1>Maaz Amjad</h1>
+                <img src="images/profile.jpeg" alt="Profile Picture" class="profile-image">
+                <h1>Drake Wyatt</h1>
                 <p class="interests">Interests in AI, Human Computer Interaction.</p>
                 <div class="social-links">
                     <a href="#" class="social-link location">
@@ -239,19 +239,19 @@
                         <img src="images/logo.png" alt="TTU Logo" class="ttu-logo">
                         Texas Tech University
                     </a>
-                    <a href="mailto:maaz.amjad@ttu.edu" class="social-link email">
+                    <a href="mailto:drakwyat@ttu.edu" class="social-link email">
                         <i class="fas fa-envelope"></i>
                         Email
                     </a>
-                    <a href="https://github.com/MaazAmjad" class="social-link github" target="_blank">
+                    <a href="https://github.com/theName921" class="social-link github" target="_blank">
                         <i class="fab fa-github"></i>
                         Github
                     </a>
-                    <a href="https://www.linkedin.com/in/maazmjad/" class="social-link linkedin" target="_blank">
+                    <a href="https://www.linkedin.com/in/DrakeWyatt/" class="social-link linkedin" target="_blank">
                         <i class="fab fa-linkedin"></i>
                         LinkedIn
                     </a>
-                    <a href="https://x.com/MaazAmjad13" class="social-link twitter" target="_blank">
+                    <a href="https://x.com/Drakers921" class="social-link twitter" target="_blank">
                         <i class="fab fa-x-twitter"></i>
                         X (formerly Twitter)
                     </a>
@@ -261,19 +261,19 @@
             <div class="main-content">
                 <h2>About me</h2>
                 <div class="content-block">
-                    <p>I am a final-year Computer Science student at <a href="https://www.ttu.edu" class="highlight-link" target="_blank">Texas Tech University</a>, where I've developed a strong foundation in software development and artificial intelligence. Currently, I'm working on my senior thesis project focused on developing machine learning solutions for healthcare applications, under the guidance of <a href="#" class="highlight-link">Dr. [Advisor Name]</a>.</p>
+                    <p>I am a third-year Computer Science student at <a href="https://www.ttu.edu" class="highlight-link" target="_blank">Texas Tech University</a>, where I've developed a strong foundation in software development and general coding practices. Currently, I'm working on finishing my robotics minor, under the guidance of <a href="#" class="highlight-link">Daniel Martin</a>.</p>
                 </div>
 
                 <div class="content-block">
-                    <p>During my academic career, I've maintained a 3.8 GPA while gaining hands-on experience in full-stack development, data structures, and algorithm design. I've served as a teaching assistant for the Introduction to Programming course and led the university's AI Student Society, organizing workshops and hackathons.</p>
+                    <p>During my academic career, I've maintained a 4.0 GPA while gaining hands-on experience in data structures, algorithm design, and robotics design. I've served as a UIL coach for a local highschool's computer science team, Ropes ISD. </p>
                 </div>
 
                 <div class="content-block">
-                    <p>My technical interests center around machine learning and human-computer interaction. I recently completed a summer internship at <a href="#" class="highlight-link">[Tech Company]</a>, where I contributed to developing a real-time data analytics dashboard using React and Node.js. I'm particularly passionate about creating accessible and user-friendly applications that solve practical problems.</p>
+                    <p>My technical interests center around robotics design.</p>
                 </div>
 
                 <div class="content-block">
-                    <p>Beyond academics, I'm an avid participant in competitive programming contests and have represented Texas Tech in regional hackathons. I enjoy contributing to open-source projects and mentoring junior students in programming fundamentals. When I'm not coding, you can find me exploring photography or playing chess at our university's chess club.</p>
+                    <p>Beyond academics, I'm a volunteer firefighter in my local hometown. I also do contract work for local buisnesses including, but not limited to, running ethernet for a lawfirm and setting up their network.</p>
                 </div>
             </div>
         </div>
